[fix] box-settings truncated text

--- a/scss/_box-settings.scss
+++ b/scss/_box-settings.scss
@@ -68,6 +68,7 @@
 	.sui-box-settings-col-2 {
 
 		@include media(min-width, md) {
+			min-width: 0;
 			flex: 1;
 		}
 	}
